<resources>
    <string name="app_name">Let\'s Get Fit!</string>
    <string name="edit_message">Enter food</string>
    <string name="button_workout">Workout</string>
    <string name="button_nutrition">Nutrition</string>
    <string name="button_settings">Settings</string>
    <string name="button_search">Search</string>

    <!--Youtube API-->
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="button_user_info">User Info</string>
    <string name="button_gain_weight">Gain Muscle</string>
    <string name="button_lose_weight">Lose Weight</string>
    <string name="button_easy">Easy</string>
    <string name="button_medium">Medium</string>
    <string name="button_hard">Hard</string>
    <string name="search_food">Look for Food</string>
    <string name="add_food">Add food</string>
    <string name="protein_text">Protein</string>
    <string name="carbohydrate_text">Carbohydrate</string>
    <string name="fat_text">Total Fat</string>
    <string name="calorie_text">Calories</string>
    <string name="serving_size_text">Serving Size</string>
    <string name="serving_text">Serving Unit</string>
    <string name="item_text">Name</string>
    <string name="bramd_text">Brand</string>
    <string name="user_info_title">USER INFO</string>
    <string name="gender_text">Gender:</string>
    <string name="button_male">Male</string>
    <string name="button_female">Female</string>
    <string name="age_text">Age:</string>
    <string name="weight_text">Weight:</string>
    <string name="height_text">Height:</string>
    <string name="in_text">in</string>
    <string name="ft_text">ft</string>
    <string name="lbs_text">lbs</string>
    <string name="goal_text">Goal:</string>
    <string name="button_save">Save</string>
    <string name="button_calculateCal">Calculate Calorie</string>
    <string name="button_goal">Save Goal</string>
    <string name="button_saveFood">Save Food</string>
    <string name="textview_addFood">Add Food</string>
    <string name="button_loadGoal">Load Goal</string>
    <string name="text_rest">Rest</string>
    <string name="text_cardio">20 min Cardio</string>
</resources>
