<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ykeocorp.letsgetfit.Nutrition_Java.AddFoodActivity"
    android:background="@drawable/background_2">

    <TextView
        android:id="@+id/title_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/add_food"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/goal_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_calorieDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_calorieDisplay"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/textView_calorieDisplay"
        android:layout_toRightOf="@+id/textView_calorieDisplay"
        android:text="@string/calorie_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/food_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/food_editText"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/food_editText"
        android:layout_toRightOf="@+id/food_editText"
        android:text="@string/button_search" />

    <Button
        android:id="@+id/saveGoal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/food_editText"
        android:layout_alignStart="@+id/food_editText"
        android:layout_below="@+id/addFood_listView"
        android:layout_marginTop="20dp"
        android:onClick="saveGoal"
        android:text="@string/button_goal" />

    <Button
        android:id="@+id/saveFood_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_saveFood"
        android:layout_alignBaseline="@+id/saveGoal_button"
        android:layout_alignBottom="@+id/saveGoal_button"
        android:layout_toRightOf="@+id/food_editText"
        android:layout_toEndOf="@+id/food_editText" />

    <Button
        android:id="@+id/loadGoal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/saveGoal_button"
        android:layout_alignStart="@+id/saveGoal_button"
        android:layout_below="@+id/saveFood_button"
        android:onClick="loadGoal"
        android:text="@string/button_loadGoal" />

    <ListView
        android:id="@+id/addFood_listView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_below="@+id/food_editText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
