<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ykeocorp.letsgetfit.LoseWeightTrainingDifficulty">

    <Button
        android:id="@+id/LWEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLWEasy"
        android:text="@string/button_easy"
        app:layout_constraintBottom_toTopOf="@+id/LWMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LWMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLWMedium"
        android:text="@string/button_medium"
        app:layout_constraintBottom_toTopOf="@+id/LWHard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LWEasy" />

    <Button
        android:id="@+id/LWHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLWHard"
        android:text="@string/button_hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LWMedium" />
</android.support.constraint.ConstraintLayout>
