<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ykeocorp.letsgetfit.Workout_Java.Gain_Weight_Java.GainWeightTrainingDifficulty">

    <Button
        android:id="@+id/GWEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openGWEasy"
        android:text="@string/button_easy"
        app:layout_constraintBottom_toTopOf="@+id/GWMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/GWMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openGWMedium"
        android:text="@string/button_medium"
        app:layout_constraintBottom_toTopOf="@+id/GWHard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GWEasy" />

    <Button
        android:id="@+id/GWHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openGWHard"
        android:text="@string/button_hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GWMedium" />

</android.support.constraint.ConstraintLayout>
